--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         Hello there, awesome person!
         <img src="https://octodex.github.com/images/vinyltocat.png">
         <ol>
-            <li>This</li>
-            <li>Is an</li>
-            <li>Ordered list</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ol>
 
         And...
 
         <ul>
-             <li>This</li>
-             <li>Is an</li>
-             <li>Unordered list</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ul>
     </body>
 </html>
